--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,24 @@
 {
   "manifest_version": 2,
 
-  "name": "Unsplash Download Tracker",
-  "description": "Track your Unsplash Downloads.",
+  "name": "Simple Analytics Extension",
+  "description": "Track your simple analytics dashboards.",
   "version": "0.0.0.1",
 
   "icons": {
-    "48": "icon.png"
+    "48": "SimpleAnalytic.png"
   },
-
+  "content_security_policy": "script-src 'self' https://simpleanalytics.com 'unsafe-eval'; object-src 'self'",
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "https://*/"
   ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "SimpleAnalytic.png",
     "default_popup": "popup.html"
   }
 }
